wrapped up species info helper functions into SpeciesInfo and species_registry module

--- a/mhcnames/data/gene_ontology.yaml
+++ b/mhcnames/data/gene_ontology.yaml
@@ -9,21 +9,25 @@ HLA:
     - E
     - F
     - G
+  Ic:
+    - CD1a
+    - CD1b
+    - CD1c
   IIa:
-    - DR:
+    DR:
       - DRA
       - DRB
-    - DP:
+    DP:
       - DPA
       - DPB
-    - DQ:
+    DQ:
       - DQA
       - DQB
   IIb:
-    - DO:
+    DO:
       - DOA
       - DOB
-    - DM:
+    DM:
       - DMA
       - DMB
 ######################################################
@@ -94,22 +98,22 @@ H2:
     - M10-PS2
     - M10-PS3
   IIa:
-    - A:
+    A:
       - AA
       - AB
-    - E:
+    E:
       - EA
       - EB1
       - EB2
-    - P:
+    P:
       - PA
       - PB
   IIb:
-    - DM:
+    DM:
       - DMA
       - DMB1
       - DMB2
-    - DO:
+    DO:
       - OA
       - OB
 ######################################################
@@ -119,24 +123,24 @@ H2:
 #
 ######################################################
 Eqca:
-  - Ia:
+  Ia:
     - N
-    - 1
-    - 2
-    - 3
-    - 4
-    - 6
-    - 7
-    - 16
-  - IIb:
-    - DQ:
+    - "1"
+    - "2"
+    - "3"
+    - "4"
+    - "6"
+    - "7"
+    - "16"
+  IIb:
+    DQ:
       - DQA1
       - DQA2
       - DQA3
       - DQB1
       - DQB2
       - DQB3
-    - DR:
+    DR:
       - DRA
       - DRB1
       - DRB2
@@ -194,7 +198,7 @@ Susc:
 #
 ######################################################
 BoLA:
-  - Ia:
+  Ia:
     - NC1
     - NC2
     - NC3
@@ -206,13 +210,14 @@ BoLA:
     - "4"
     - "5"
     - "6"
-  - DQ:
-    - DQA
-    - DQA1
-    - DQB
-  - DR:
-    - DRA
-    - DRB3
+  IIa:
+    DQ:
+      - DQA
+      - DQA1
+      - DQB
+    DR:
+      - DRA
+      - DRB3
 ######################################################
 #
 # Ovid MHC gene data copied from:
@@ -220,12 +225,12 @@ BoLA:
 #
 ######################################################
 Ovar:
-  - Ia:
+  Ia:
     - N
-  - IIa:
-    - DQ:
+  IIa:
+    DQ:
       - DQA1 # TODO: what happened to DQB1?
-    - DR:
+    DR:
       - DRA
       - DRB1
 ######################################################
@@ -235,17 +240,17 @@ Ovar:
 #
 ######################################################
 Onmy:
-  - Ia:
+  Ia:
     - UBA
-  - IIa:
-    - DA:
+  IIa:
+    DA:
       - DAA
       - DAB
 Sasa:
-  - Ia:
+  Ia:
     - UBA
-  - IIa:
-    - DA:
+  IIa:
+    DA:
       - DAA
       - DAB
 ######################################################
@@ -255,16 +260,16 @@ Sasa:
 #
 ######################################################
 Calu:
-  - Ia:
+  Ia:
     - "12"
     - "64"
     - "88"
-  - IIa:
-    - DQ:
+  IIa:
+    DQ:
       - DQA1
       - DQB1
-    - DR:
-        - DRB1 # TODO: what happened to DRA?
+    DR:
+      - DRB1 # TODO: what happened to DRA?
 ######################################################
 #
 # Murid MHC gene data copied from:
@@ -274,7 +279,7 @@ Calu:
 #
 ######################################################
 Rano:
-  - Ia:
+  Ia:
     - A
     - A1
     - A2
@@ -282,13 +287,14 @@ Rano:
     - CE5
     - CE16
     - "9.5"
-  - IIa:
-    - D:
+    - "9.6"
+  IIa:
+    D:
       - Da
       - Db1
-  - IIb:
-    - DO:
+  IIb:
+    DO:
       - DOa
       - DOb
-    - DM:
+    DM:
       - DMA
