small change to aliases

--- a/mhcnames/data/gene_ontology.yaml
+++ b/mhcnames/data/gene_ontology.yaml
@@ -38,11 +38,11 @@ HLA:
 ######################################################
 H2:
   Ia:
-    - D1
+    - D
     - D2
     - D3
     - D4
-    - K1
+    - K
     - K2
     - L
   Ib:
@@ -132,7 +132,7 @@ Eqca:
     - "6"
     - "7"
     - "16"
-  IIb:
+  IIa:
     DQ:
       - DQA1
       - DQA2
