expanding which data gets generated in data.py

--- a/mhcnames/data/gene_aliases.yaml
+++ b/mhcnames/data/gene_aliases.yaml
@@ -1,3 +1,6 @@
+HLA:
+  Cw: C
+  DPw: DP
 ##########################################################################
 #
 # Mouse gene aliases copied from
