got rid of '*' check in string normalization function

--- a/mhcnames/data/gene_aliases.yaml
+++ b/mhcnames/data/gene_aliases.yaml
@@ -1,6 +1,8 @@
 HLA:
   Cw: C
   DPw: DP
+  DRB: DRB1
+
 ##########################################################################
 #
 # Mouse gene aliases copied from
